Fixed image container wrap.

--- a/css/new.css
+++ b/css/new.css
@@ -60,8 +60,8 @@
 
 .new-img {
   position: relative;
-  max-width: 100%;
-  max-height: 100%;
+  min-width: 100%;
+  height: 20rem;
   border-radius: var(--br-12-small-card-item);
   overflow: hidden;
 }
@@ -83,9 +83,9 @@
 }
 
 .new-img img {
-  max-width: 30%;
-  margin-inline: auto;
-  object-fit: cover;
+  object-fit: scale-down;
+  min-width: 100%;
+  max-height: 100%;
   transition: var(--transition-e);
 }
 
